2004-07-22  Andreas Schwab  <schwab@suse.de>

	Import Gnus 5.10 from the v5_10 branch of the Gnus repository.

2004-06-29  Kim F. Storm  <storm@cua.dk>

	* nntp.el (nntp-authinfo-file): Add :group 'nntp.

	* nnimap.el (nnimap-authinfo-file, nnimap-prune-cache):
	Add :group 'nnimap.

2004-05-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mm-view.el (mm-insert-inline): Make it work in read-only buffer.

	* gnus-win.el (gnus-all-windows-visible-p): Don't consider
	non-visible windows.

2004-05-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* rfc2047.el (rfc2047-encode-message-header): Don't encode non-address
	headers as address headers (which breaks if subject has a single ").

2004-05-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnimap.el (nnimap-demule): Avoid string-as-multibyte.

2004-04-21  Richard M. Stallman  <rms@gnu.org>

	* mailcap.el (mailcap-mime-data): Mark as risky.

2004-03-27  Juanma Barranquero  <lektu@terra.es>

	* gnus-srvr.el (gnus-server-prepare): Remove spurious call to `cdr'.

2004-03-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-art.el: Use inhibit-read-only instead of buffer-read-only.
	(gnus-narrow-to-page): Don't assume point-min == 1.
	(gnus-article-edit-mode): Derive from message-mode.
	(gnus-button-alist): Add buttons to (info "(emacs)Keymaps").

	* gnus-score.el (gnus-score-find-bnews): Simplify and don't assume
	point-min == 1.

	* imap.el (imap-parse-address-list, imap-parse-body-ext):
	Disable incorrect use of `assert'.

2004-03-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* message.el (message-mode): Fix last change.

2004-03-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* message.el (message-mode): Set comment-start-skip.

2004-02-08  Andreas Schwab  <schwab@suse.de>

	* nnlistserv.el (nnlistserv-kk-wash-article): Fix paren nesting.

	* gnus-score.el (gnus-summary-increase-score): Fix format string.

2003-06-25  Sam Steingold  <sds@gnu.org>

	* gnus-group.el (gnus-group-suspend): Avoid some consing.
